[package]
name = "adze-bdd-conflict-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Conflict analysis and parse-table builders for GLR BDD fixtures."
repository = "https://github.com/EffortlessMetrics/adze"
publish = ["crates.io"]

[features]
default = []
strict_api = []
strict_docs = []

[dependencies]
adze-glr-core = { version = "0.8.0-dev", path = "../../glr-core" }
adze-ir = { version = "0.8.0-dev", path = "../../ir" }
