[package]
name = "adze-bdd-governance-contract"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Shared governance contracts for parser BDD progress and feature profiles."
repository = "https://github.com/EffortlessMetrics/adze"
publish = ["crates.io"]

[features]
default = []
pure-rust = ["adze-governance-matrix-contract/pure-rust"]
tree-sitter-standard = ["adze-governance-matrix-contract/tree-sitter-standard"]
tree-sitter-c2rust = ["adze-governance-matrix-contract/tree-sitter-c2rust"]
glr = ["pure-rust", "adze-governance-matrix-contract/glr"]
strict_api = ["adze-governance-matrix-contract/strict_api"]
strict_docs = ["adze-governance-matrix-contract/strict_docs"]

[dependencies]
adze-governance-matrix-contract = { version = "0.1.0", path = "../governance-matrix-contract" }
