[package]
name = "adze-bdd-governance-contract"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Shared governance contracts for parser BDD progress and feature profiles."
repository = "https://github.com/EffortlessMetrics/adze"
publish = ["crates-io"]
keywords = ["bdd", "testing", "scenarios", "parser", "grammar"]
categories = ["development-tools::testing"]
homepage = "https://github.com/EffortlessMetrics/adze"
documentation = "https://docs.rs/adze-bdd-governance-contract"

[features]
default = []
pure-rust = ["adze-bdd-governance-core/pure-rust"]
tree-sitter-standard = ["adze-bdd-governance-core/tree-sitter-standard"]
tree-sitter-c2rust = ["adze-bdd-governance-core/tree-sitter-c2rust"]
glr = ["pure-rust", "adze-bdd-governance-core/glr"]
strict_api = ["adze-bdd-governance-core/strict_api"]
strict_docs = ["adze-bdd-governance-core/strict_docs"]

[dependencies]
adze-bdd-governance-core = { version = "0.1.0", path = "../bdd-governance-core" }

[dev-dependencies]
proptest = { workspace = true }
