[package]
name = "adze-bdd-governance-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Core BDD governance matrix primitives composed with parser feature policies."
repository = "https://github.com/EffortlessMetrics/adze"
publish = ["crates.io"]

[features]
default = []
pure-rust = ["adze-bdd-governance-snapshot-core/pure-rust"]
tree-sitter-c2rust = ["adze-bdd-governance-snapshot-core/tree-sitter-c2rust"]
tree-sitter-standard = ["adze-bdd-governance-snapshot-core/tree-sitter-standard"]
glr = ["pure-rust", "adze-bdd-governance-snapshot-core/glr"]
strict_api = [
  "adze-bdd-grid-core/strict_api",
  "adze-bdd-governance-snapshot-core/strict_api",
]
strict_docs = [
  "adze-bdd-grid-core/strict_docs",
  "adze-bdd-governance-snapshot-core/strict_docs",
]

[dependencies]
adze-bdd-grid-core = { version = "0.1.0", path = "../bdd-grid-core" }
adze-bdd-governance-snapshot-core = { version = "0.1.0", path = "../bdd-governance-snapshot-core" }
