[package]
name = "adze-bdd-governance-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Core BDD governance matrix primitives composed with parser feature policies."
repository = "https://github.com/EffortlessMetrics/adze"
publish = ["crates-io"]
keywords = ["bdd", "testing", "scenarios", "parser", "grammar"]
categories = ["development-tools::testing"]
homepage = "https://github.com/EffortlessMetrics/adze"
documentation = "https://docs.rs/adze-bdd-governance-core"

[features]
default = []
pure-rust = ["adze-feature-policy-core/pure-rust"]
tree-sitter-c2rust = ["adze-feature-policy-core/tree-sitter-c2rust"]
tree-sitter-standard = ["adze-feature-policy-core/tree-sitter-standard"]
glr = ["pure-rust", "adze-feature-policy-core/glr"]
strict_api = ["adze-bdd-grid-core/strict_api", "adze-feature-policy-core/strict_api", "adze-bdd-governance-reporting-core/strict_api"]
strict_docs = ["adze-bdd-grid-core/strict_docs", "adze-feature-policy-core/strict_docs", "adze-bdd-governance-reporting-core/strict_docs"]

[dependencies]
adze-bdd-grid-core = { version = "0.1.0", path = "../bdd-grid-core" }
adze-feature-policy-core = { version = "0.1.0", path = "../feature-policy-core" }
adze-bdd-governance-reporting-core = { version = "0.1.0", path = "../bdd-governance-reporting-core" }

[dev-dependencies]
proptest = { workspace = true }
